force-app/main/default/objects/Resume__c/fields/Checkbox10__c.field-meta.xml
<CustomField>
    <fullName>Checkbox10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox10</label>
    <type>Checkbox</type>
</CustomField>