force-app/main/default/objects/Resume__c/fields/Checkbox11__c.field-meta.xml
<CustomField>
    <fullName>Checkbox11__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox11</label>
    <type>Checkbox</type>
</CustomField>