force-app/main/default/objects/Resume__c/fields/Checkbox12__c.field-meta.xml
<CustomField>
    <fullName>Checkbox12__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox12</label>
    <type>Checkbox</type>
</CustomField>