force-app/main/default/objects/Resume__c/fields/Currency10__c.field-meta.xml
<CustomField>
    <fullName>Currency10__c</fullName>
    <label>Currency10</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>