force-app/main/default/objects/Resume__c/fields/Currency11__c.field-meta.xml
<CustomField>
    <fullName>Currency11__c</fullName>
    <label>Currency11</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>