force-app/main/default/objects/Resume__c/fields/Currency12__c.field-meta.xml
<CustomField>
    <fullName>Currency12__c</fullName>
    <label>Currency12</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>