force-app/main/default/objects/Resume__c/fields/Date10__c.field-meta.xml
<CustomField>
    <fullName>Date10__c</fullName>
    <label>Date10</label>
    <type>Date</type>
</CustomField>