force-app/main/default/objects/Resume__c/fields/Date11__c.field-meta.xml
<CustomField>
    <fullName>Date11__c</fullName>
    <label>Date11</label>
    <type>Date</type>
</CustomField>