force-app/main/default/objects/Resume__c/fields/Date12__c.field-meta.xml
<CustomField>
    <fullName>Date12__c</fullName>
    <label>Date12</label>
    <type>Date</type>
</CustomField>