force-app/main/default/objects/Resume__c/fields/DateTime10__c.field-meta.xml
<CustomField>
    <fullName>DateTime10__c</fullName>
    <label>DateTime10</label>
    <type>DateTime</type>
</CustomField>