force-app/main/default/objects/Resume__c/fields/DateTime11__c.field-meta.xml
<CustomField>
    <fullName>DateTime11__c</fullName>
    <label>DateTime11</label>
    <type>DateTime</type>
</CustomField>