force-app/main/default/objects/Resume__c/fields/DateTime12__c.field-meta.xml
<CustomField>
    <fullName>DateTime12__c</fullName>
    <label>DateTime12</label>
    <type>DateTime</type>
</CustomField>