force-app/main/default/objects/Resume__c/fields/Development__c.field-meta.xml
<CustomField>
    <fullName>Development__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Development</label>
    <type>Checkbox</type>
</CustomField>