force-app/main/default/objects/Resume__c/fields/Email10__c.field-meta.xml
<CustomField>
    <fullName>Email10__c</fullName>
    <label>Email10</label>
    <type>Email</type>
</CustomField>