force-app/main/default/objects/Resume__c/fields/Email11__c.field-meta.xml
<CustomField>
    <fullName>Email11__c</fullName>
    <label>Email11</label>
    <type>Email</type>
</CustomField>