force-app/main/default/objects/Resume__c/fields/Email12__c.field-meta.xml
<CustomField>
    <fullName>Email12__c</fullName>
    <label>Email12</label>
    <type>Email</type>
</CustomField>