force-app/main/default/objects/Resume__c/fields/Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Job_Description__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Description</label>
    <referenceTo>Job_Description__c</referenceTo>
    <relationshipLabel>Resumes</relationshipLabel>
    <relationshipName>Resumes</relationshipName>
    <type>Lookup</type>
</CustomField>