force-app/main/default/objects/Resume__c/fields/LongTextArea10__c.field-meta.xml
<CustomField>
    <fullName>LongTextArea10__c</fullName>
    <label>LongTextArea10</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>