force-app/main/default/objects/Resume__c/fields/LongTextArea11__c.field-meta.xml
<CustomField>
    <fullName>LongTextArea11__c</fullName>
    <label>LongTextArea11</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>