force-app/main/default/objects/Resume__c/fields/LongTextArea12__c.field-meta.xml
<CustomField>
    <fullName>LongTextArea12__c</fullName>
    <label>LongTextArea12</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>