force-app/main/default/objects/Resume__c/fields/MultiPicklist10__c.field-meta.xml
<CustomField>
    <fullName>MultiPicklist10__c</fullName>
    <label>MultiPicklist10</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>