force-app/main/default/objects/Resume__c/fields/Number10__c.field-meta.xml
<CustomField>
    <fullName>Number10__c</fullName>
    <label>Number10</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>