force-app/main/default/objects/Resume__c/fields/Number11__c.field-meta.xml
<CustomField>
    <fullName>Number11__c</fullName>
    <label>Number11</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>