force-app/main/default/objects/Resume__c/fields/Number12__c.field-meta.xml
<CustomField>
    <fullName>Number12__c</fullName>
    <label>Number12</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>