force-app/main/default/objects/Resume__c/fields/Percentage10__c.field-meta.xml
<CustomField>
    <fullName>Percentage10__c</fullName>
    <label>Percentage10</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>