force-app/main/default/objects/Resume__c/fields/Percentage11__c.field-meta.xml
<CustomField>
    <fullName>Percentage11__c</fullName>
    <label>Percentage11</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>