force-app/main/default/objects/Resume__c/fields/Percentage12__c.field-meta.xml
<CustomField>
    <fullName>Percentage12__c</fullName>
    <label>Percentage12</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>