force-app/main/default/objects/Resume__c/fields/Phone10__c.field-meta.xml
<CustomField>
    <fullName>Phone10__c</fullName>
    <label>Phone10</label>
    <type>Phone</type>
</CustomField>