force-app/main/default/objects/Resume__c/fields/Phone11__c.field-meta.xml
<CustomField>
    <fullName>Phone11__c</fullName>
    <label>Phone11</label>
    <type>Phone</type>
</CustomField>