force-app/main/default/objects/Resume__c/fields/Phone12__c.field-meta.xml
<CustomField>
    <fullName>Phone12__c</fullName>
    <label>Phone12</label>
    <type>Phone</type>
</CustomField>