force-app/main/default/objects/Resume__c/fields/Picklist12__c.field-meta.xml
<CustomField>
    <fullName>Picklist12__c</fullName>
    <label>Picklist12</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>