force-app/main/default/objects/Resume__c/fields/RichTextArea10__c.field-meta.xml
<CustomField>
    <fullName>RichTextArea10__c</fullName>
    <label>RichTextArea10</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>