force-app/main/default/objects/Resume__c/fields/RichTextArea11__c.field-meta.xml
<CustomField>
    <fullName>RichTextArea11__c</fullName>
    <label>RichTextArea11</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>