force-app/main/default/objects/Resume__c/fields/RichTextArea12__c.field-meta.xml
<CustomField>
    <fullName>RichTextArea12__c</fullName>
    <label>RichTextArea12</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>