force-app/main/default/objects/Resume__c/fields/Testing__c.field-meta.xml
<CustomField>
    <fullName>Testing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Testing</label>
    <type>Checkbox</type>
</CustomField>