force-app/main/default/objects/Resume__c/fields/Text10__c.field-meta.xml
<CustomField>
    <fullName>Text10__c</fullName>
    <label>Text10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>