force-app/main/default/objects/Resume__c/fields/Text11__c.field-meta.xml
<CustomField>
    <fullName>Text11__c</fullName>
    <label>Text11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>