force-app/main/default/objects/Resume__c/fields/Text12__c.field-meta.xml
<CustomField>
    <fullName>Text12__c</fullName>
    <label>Text12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>