force-app/main/default/objects/Resume__c/fields/TextArea10__c.field-meta.xml
<CustomField>
    <fullName>TextArea10__c</fullName>
    <label>TextArea10</label>
    <type>TextArea</type>
</CustomField>