force-app/main/default/objects/Resume__c/fields/TextArea11__c.field-meta.xml
<CustomField>
    <fullName>TextArea11__c</fullName>
    <label>TextArea11</label>
    <type>TextArea</type>
</CustomField>