force-app/main/default/objects/Resume__c/fields/TextArea12__c.field-meta.xml
<CustomField>
    <fullName>TextArea12__c</fullName>
    <label>TextArea12</label>
    <type>TextArea</type>
</CustomField>