force-app/main/default/objects/Resume__c/fields/Time10__c.field-meta.xml
<CustomField>
    <fullName>Time10__c</fullName>
    <label>Time10</label>
    <type>Time</type>
</CustomField>