force-app/main/default/objects/Resume__c/fields/Time11__c.field-meta.xml
<CustomField>
    <fullName>Time11__c</fullName>
    <label>Time11</label>
    <type>Time</type>
</CustomField>