force-app/main/default/objects/Resume__c/fields/Time12__c.field-meta.xml
<CustomField>
    <fullName>Time12__c</fullName>
    <label>Time12</label>
    <type>Time</type>
</CustomField>