force-app/main/default/objects/Resume__c/fields/URL10__c.field-meta.xml
<CustomField>
    <fullName>URL10__c</fullName>
    <label>URL10</label>
    <type>Url</type>
</CustomField>