force-app/main/default/objects/Resume__c/fields/URL11__c.field-meta.xml
<CustomField>
    <fullName>URL11__c</fullName>
    <label>URL11</label>
    <type>Url</type>
</CustomField>