force-app/main/default/objects/Resume__c/fields/URL12__c.field-meta.xml
<CustomField>
    <fullName>URL12__c</fullName>
    <label>URL12</label>
    <type>Url</type>
</CustomField>